--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aloborio/blockchain",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "JavaScript SDK to seamlessly work with Blockchains",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   "dependencies": {
     "@babel/polyfill": "7.4.4",
     "axios": "0.19.0",
-    "bitcore": "3.0.0",
+    "bitcore": "5.0.0-beta.44",
     "cote": "0.20.0",
     "cron": "1.7.1",
     "dotenv": "8.0.0",
